--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Vite + React</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root"></div> 
+    <img src="https://storage.googleapis.com/download/storage/v1/b/upload-firebase-in-java.appspot.com/o/2024-01-06_20-30-492023-12-12_22-01-27anh-gai-xinh-toc-ngang-vai-2k7.jpg?generation=1704547852342491&alt=media" alt="">
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
